# MSSqlPwner

./: .gitignore  192.168.202.5_offsec.state  192.168.202.60_administrator.state  192.168.202.60_offsec.state  192.168.202.70_administrator.state  192.168.202.70_offsec.state  192.168.218.5_administrator.state  192.168.218.5_offsec.state  192.168.248.5_admin.state  192.168.248.5_offsec.state  Administrator.ccache  MSSqlPwner.py  README.md  SRV01$.ccache  base_sql_client.py  passwords.txt  pyproject.toml  requirements.txt  tests.py  tests.txt  users.txt  utilities.py
classes/: __init__.py  base_sql_client.py  operations.py  query_builder.py
mssqlpwner/: __main__.py  cli.py  utilities.py
mssqlpwner/classes/: base_sql_client.py  operations.py  query_builder.py
mssqlpwner/playbooks/: playbooks.py  queries.py  translation.json
mssqlpwner/playbooks/custom-asm/: Inject.cs  ldap-server.cs
playbooks/: Queries.py  __init__.py  modules.py  playbooks.py  translation.json
playbooks/custom-asm/: CmdExec.cs  sample.cs
