[tool.poetry]
name = "mssqlpwner"
version = "1.3.2"
description = "seamlessly interact and pwn MSSQL servers"
authors = ["Nimrod Levy <El3ct71k@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
impacket = "^0.11.0"
termcolor = "^2.4.0"
prompt-toolkit = "^3.0.45"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mssqlpwner = "mssqlpwner.cli:console"